kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: homework
spec:
  selector:
    app: web-app
  ports:
    - name: web-app-port
      protocol: TCP
      port: 80
      targetPort: 8000
