kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: homework
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
